--- a/components/stableCoins/StableCoins.module.scss
+++ b/components/stableCoins/StableCoins.module.scss
@@ -73,7 +73,7 @@
 				}
 				&:nth-child(2) {
 					top: 1.7rem;
-					left: 15.9rem;
+					left: calc(50% - 5.45rem);
 				}
 				&:nth-child(3) {
 					top: 0;
